sdk-docs_versioned_docs/version-23.0.x/enums/Generated/Types/PortfolioTx/PortfolioTx.md
---
id: "PortfolioTx"
title: "Enumeration: PortfolioTx"
sidebar_label: "PortfolioTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).PortfolioTx

## Enumeration Members

### AcceptPortfolioCustody

• **AcceptPortfolioCustody** = ``"portfolio.acceptPortfolioCustody"``

#### Defined in

[generated/types.ts:611](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L611)

___

### AllowIdentityToCreatePortfolios

• **AllowIdentityToCreatePortfolios** = ``"portfolio.allowIdentityToCreatePortfolios"``

#### Defined in

[generated/types.ts:615](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L615)

___

### CreateCustodyPortfolio

• **CreateCustodyPortfolio** = ``"portfolio.createCustodyPortfolio"``

#### Defined in

[generated/types.ts:617](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L617)

___

### CreatePortfolio

• **CreatePortfolio** = ``"portfolio.createPortfolio"``

#### Defined in

[generated/types.ts:606](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L606)

___

### DeletePortfolio

• **DeletePortfolio** = ``"portfolio.deletePortfolio"``

#### Defined in

[generated/types.ts:607](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L607)

___

### MovePortfolioFunds

• **MovePortfolioFunds** = ``"portfolio.movePortfolioFunds"``

#### Defined in

[generated/types.ts:608](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L608)

___

### MovePortfolioFundsV2

• **MovePortfolioFundsV2** = ``"portfolio.movePortfolioFundsV2"``

#### Defined in

[generated/types.ts:612](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L612)

___

### PreApprovePortfolio

• **PreApprovePortfolio** = ``"portfolio.preApprovePortfolio"``

#### Defined in

[generated/types.ts:613](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L613)

___

### QuitPortfolioCustody

• **QuitPortfolioCustody** = ``"portfolio.quitPortfolioCustody"``

#### Defined in

[generated/types.ts:610](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L610)

___

### RemovePortfolioPreApproval

• **RemovePortfolioPreApproval** = ``"portfolio.removePortfolioPreApproval"``

#### Defined in

[generated/types.ts:614](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L614)

___

### RenamePortfolio

• **RenamePortfolio** = ``"portfolio.renamePortfolio"``

#### Defined in

[generated/types.ts:609](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L609)

___

### RevokeCreatePortfoliosPermission

• **RevokeCreatePortfoliosPermission** = ``"portfolio.revokeCreatePortfoliosPermission"``

#### Defined in

[generated/types.ts:616](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2c78f6c34/src/generated/types.ts#L616)
